--- a/src/components/layout/header/index.astro
+++ b/src/components/layout/header/index.astro
@@ -3,13 +3,15 @@ import ShoppingBagIcon from './icons/shopping-bag.astro'
 import UserIcon from './icons/user.astro'
 import UserSidebar from './user-sidebar.astro'
 import HamburgerIcon from './icons/hamburger.astro'
-import MenuSidebar from './menu-sidebar.astro'
+import MenuSidebar from './menu-sidebar/index.astro'
 import pages from './pages.json'
 import ShoppingBagSidebar from './shopping-bag-sidebar.astro'
 import type { IShoppingBagSidebarProp } from '@misc'
 import Logo from '@components/logo.astro'
 import TextCarousel from './text-carousel'
 import { PUBLIC_FM_COMPANY_NAME_SHORT, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
+import DesktopMenuItem from './desktop-menu-item.astro'
+import CollectionMenu from './collection-menu/index.astro'
 
 interface Props {
   signedIn:boolean;
@@ -17,15 +19,16 @@ interface Props {
   showUserIcon?:boolean;
   shoppingBagProp?:IShoppingBagSidebarProp;
   headerCarouselTexts:string[];
+  collectionMenuMap?:{[c:string]:{[d:string]:string[]}};
 }
 
 const acceptMembership = PUBLIC_FM_ACCEPT_MEMBERSHIP === 'true'
-const { showUserIcon, shoppingBagProp, signedIn, firstName, headerCarouselTexts } = Astro.props
+const { showUserIcon, shoppingBagProp, signedIn, firstName, headerCarouselTexts, collectionMenuMap } = Astro.props
 const isCheckoutPage = Astro.url.pathname === '/checkout'
 ---
 
-<div id="menu-overlay" class="fixed top-0 left-0 w-full h-full bg-white hidden opacity-50 transition-opacity duration-300 z-40"></div>
-<header class="bg-white shadow z-30 top-0 left-0 w-full fixed transition-transform duration-300">
+
+<header class={`bg-white shadow md:shadow-none z-30 top-0 left-0 w-full fixed transition-transform duration-300 ${isCheckoutPage ? 'shadow' : ''}`.trim()}>
     {!!headerCarouselTexts.length && <TextCarousel texts={headerCarouselTexts} client:load />}
     <div class={isCheckoutPage ? 'flex justify-center' : 'px-4 flex justify-between items-center'}>
         <div class={isCheckoutPage ? 'hidden' : 'flex md:hidden'}>
@@ -42,12 +45,13 @@ const isCheckoutPage = Astro.url.pathname === '/checkout'
         <nav class={isCheckoutPage ? 'hidden' : 'hidden md:block'}>
             <ul class="flex space-x-8 font-display text-lg uppercase">
                 {pages.map(({name,path})=>(
-                    <li>
-                        <a href={path}>
-                            <span class="relative inline-block after:absolute after:bottom-0 after:bg-black after:h-px after:left-1/2 after:w-0 after:duration-300 mouse:hover:after:left-0 mouse:hover:after:w-full">
-                                {name}
-                            </span>
-                        </a>
+                    <li {...name === 'shop' ? {id:'desktop-shop-li'} : {class:'flex flex-col justify-center'}}>
+                        {name==='shop' ? 
+                        <div class="mouse:py-5">
+                            <DesktopMenuItem {...{name,path}} />
+                        </div>
+                        :
+                        <DesktopMenuItem {...{name,path}} />}
                     </li>
                 ))}
             </ul>
@@ -65,13 +69,21 @@ const isCheckoutPage = Astro.url.pathname === '/checkout'
 
 {acceptMembership && !!showUserIcon && <UserSidebar {...{showUserIcon,firstName,signedIn}} />}
 {!!shoppingBagProp && <ShoppingBagSidebar props={shoppingBagProp} />}
-<MenuSidebar />
+<div id="menu-overlay" class="fixed w-screen h-screen top-0 left-0 hidden z-[35] before:absolute before:w-full before:h-full before:backdrop-blur-sm"></div>
+{!isCheckoutPage && <>
+<MenuSidebar {...{collectionMenuMap}} />
+{!!collectionMenuMap && <CollectionMenu {...{collectionMenuMap}} />}
+</>}
 
 <script>
     const header = document.querySelector('header');
     const shoppingBagCheckbox = document.getElementById('shopping-bag-sidebar-checkbox') as HTMLInputElement;
     const userCheckbox = document.getElementById('user-sidebar-checkbox') as HTMLInputElement;
     const menuCheckbox = document.getElementById("menu-sidebar-checkbox") as HTMLInputElement
+    const desktopShopLI = document.getElementById('desktop-shop-li') as HTMLLIElement
+    const desktopMenuCheckbox = document.getElementById("collection-dropdown-checkbox") as HTMLInputElement
+    const desktopMenuDropdown = document.getElementById('collection-dropdown') as HTMLDivElement
+
     let lastScrollY = window.scrollY;
 
     const onScroll = () => {
@@ -81,6 +93,7 @@ const isCheckoutPage = Astro.url.pathname === '/checkout'
             if (window.scrollY < lastScrollY) {
                 // Scrolling down
                 header.classList.remove('-translate-y-full'); // Show the navbar
+                desktopMenuDropdown.classList.remove('-translate-y-full')
             } else if (
                 (!!shoppingBagCheckbox ? !shoppingBagCheckbox.checked : true) && 
                 (!!userCheckbox ? !userCheckbox.checked : true) && 
@@ -89,10 +102,25 @@ const isCheckoutPage = Astro.url.pathname === '/checkout'
             ){
                 // Scrolling up
                 header.classList.add('-translate-y-full'); // Hide the navbar
+                if (!!desktopMenuCheckbox && desktopMenuCheckbox.checked) desktopMenuCheckbox.click()
+                desktopMenuDropdown.classList.add('-translate-y-full')
             }
         } else if (window.scrollY <= headerHeight) header.classList.remove('-translate-y-full');
         lastScrollY = window.scrollY; // Update last scroll position
     }
 
     window.addEventListener('scroll', onScroll, true);
+
+    if (!!desktopShopLI) {
+        const collectionMenuDropdownCheckbox = document.getElementById('collection-dropdown-checkbox') as HTMLInputElement
+        const onMouseEnter = () => {
+            if (!collectionMenuDropdownCheckbox.checked) collectionMenuDropdownCheckbox.click()
+        }
+        const onMouseLeave = (e:MouseEvent) => {
+            const isCollectionDropdown = (e.relatedTarget as HTMLElement).closest('#collection-dropdown')
+            if (!isCollectionDropdown && collectionMenuDropdownCheckbox.checked) collectionMenuDropdownCheckbox.click()
+        }
+        desktopShopLI.addEventListener('mouseenter',onMouseEnter,true)
+        desktopShopLI.addEventListener('mouseleave',onMouseLeave)
+    }
 </script>
