--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -32,6 +32,7 @@ const {
     minSpendForFreeShipping,
     firstName,
     headerCarouselTexts,
+    collectionMenuMap,
 } = mdwResponse
 
 Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isOnline,expiresAt))
@@ -57,7 +58,8 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
     firstName,
     title:`Contact Us | ${PUBLIC_FM_COMPANY_NAME_SHORT}`,
     headerCarouselTexts,
-    metaDescription:'Need help with your order? Contact our UK-based customer service team for support with your purchase. Fast response guaranteed on all inquiries.'
+    metaDescription:'Need help with your order? Contact our UK-based customer service team for support with your purchase. Fast response guaranteed on all inquiries.',
+    collectionMenuMap,
 }}>
     <ContactForm />
 </Layout>
