--- a/src/pages/jewellery-care-guide.astro
+++ b/src/pages/jewellery-care-guide.astro
@@ -31,6 +31,7 @@ const {
     minSpendForFreeShipping,
     firstName,
     headerCarouselTexts,
+    collectionMenuMap,
 } = mdwResponse
 
 Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isOnline,expiresAt))
@@ -56,7 +57,8 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
     firstName,
     title:`Jewellery Care Guide | ${PUBLIC_FM_COMPANY_NAME_SHORT}`,
     headerCarouselTexts,
-    metaDescription:'Learn how to care for your jewellery to keep them looking beautiful. Essential tips for cleaning, storing, and maintaining your favorite pieces.'
+    metaDescription:'Learn how to care for your jewellery to keep them looking beautiful. Essential tips for cleaning, storing, and maintaining your favorite pieces.',
+    collectionMenuMap,
 }}>
     <Terms {...{text}} />
 </Layout>
