--- a/src/pages/sign-up.astro
+++ b/src/pages/sign-up.astro
@@ -34,6 +34,7 @@ const {
     minSpendForFreeShipping,
     firstName,
     headerCarouselTexts,
+    collectionMenuMap,
 } = mdwResponse
 
 if ( signedIn ) return Astro.redirect('/')
@@ -61,6 +62,7 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
     firstName,
     title:'Sign Up',
     headerCarouselTexts,
+    collectionMenuMap,
 }}>
     <div class="flex justify-center">
         <div class="divide-y p-8 space-y-8 max-w-md lg:grid lg:grid-cols-2 lg:divide-y-0 lg:divide-x lg:max-w-screen-lg lg:pb-10">
