--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -89,7 +89,7 @@ const breadcrumbItems:ILink[] = [
             }
         </div>
     </div>
-    <ul id="breadcrumb" class="flex justify-center text-2xs 2xs:text-xs my-4 md:mt-8">
+    <ul id="breadcrumb" class="flex flex-wrap justify-center text-2xs 2xs:text-xs my-4 md:mt-8">
         {
             breadcrumbItems.map(({name,url},i)=>(
                 <>
