--- a/src/components/layout/header/menu-sidebar/sub-menu/earrings.astro
+++ b/src/components/layout/header/menu-sidebar/sub-menu/earrings.astro
@@ -12,7 +12,7 @@ const mainType = "earrings"
 ---
 
 <Wrapper title={mainType}>
-    {!!subType.length && <Section title="Shop by Category" slugs={subType} strFormat={e=>capitalizeEveryWord(e.replaceAll('-', ' '))} mainType={mainType} browseAll="Shop All Categories" subMenuSlug="subtype" />}
-    {!!metalColor.length && <Section title="Shop by Colour" slugs={metalColor} strFormat={e=>capitalizeEveryWord(e.replaceAll('-', ' ')) + ' Earrings'} mainType={mainType} subMenuSlug="color" />}
-    {!!material.length && <Section title="Shop by Material" slugs={material} strFormat={e=>capitalizeEveryWord(e.replaceAll('-', ' ')) + ' Earrings'} mainType={mainType} subMenuSlug="material" />}
+    {!!subType && !!subType.length && <Section title="Shop by Category" slugs={subType} strFormat={e=>capitalizeEveryWord(e.replaceAll('-', ' '))} mainType={mainType} browseAll="Shop All Categories" subMenuSlug="subtype" />}
+    {!!metalColor && !!metalColor.length && <Section title="Shop by Colour" slugs={metalColor} strFormat={e=>capitalizeEveryWord(e.replaceAll('-', ' ')) + ' Earrings'} mainType={mainType} subMenuSlug="color" />}
+    {!!material && !!material.length && <Section title="Shop by Material" slugs={material} strFormat={e=>capitalizeEveryWord(e.replaceAll('-', ' ')) + ' Earrings'} mainType={mainType} subMenuSlug="material" />}
 </Wrapper>
